fixed minor mistakes in alignments

--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ body::after {
 
 /* Generate random star positions */
 .intro {
-    padding: 44px 100px;
+    padding: 32px 24px;
 }
 
 .charitylink {
@@ -97,11 +97,9 @@ img {
 
 .healwrapper{
     width: 100%;
-    margin-left: 30px;
 }
 
 section#gallery {
-    padding: 32px;
     background-color: transparent; /* Transparent to show background stars */
 }
 
@@ -117,7 +115,7 @@ section#gallery h2 {
 }
 
 .art-piece img {
-    max-width: 100%;
+    max-width: 85%;
     height: auto;
     border: 1px solid #333333;
 }
@@ -138,9 +136,9 @@ section#gallery h2 {
 }
 
 footer {
-    background-color: #000000;
+    background-color: #00000035;
     color: #ffffff;
-    text-align: center;
+    text-align: left;
     padding: 20px 15px;
     border-top: 1px solid #333; /* Add a border to separate from content above */
 }
@@ -149,12 +147,15 @@ footer {
     margin: 0 auto; /* Center the content */
     max-width: 800px; /* Limit the maximum width */
     padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .contact {
     font-weight: 500;
     color: #DBFF33;
-    margin-bottom: 10px;
+    margin: 8px;
     line-height: 1.5;
 }
 
@@ -173,6 +174,7 @@ footer {
     font-size: 0.9rem;
     color: #ffffff;
     margin: 32px 0 32px;
+    text-align: center;
 }
 
 .cr a {
@@ -267,7 +269,7 @@ form textarea::placeholder {
     color: #DBFF33;}
 
 form input, form textarea {
-    width: 100%;
+    width: 95%;
     padding: 10px;
     margin-bottom: 15px;
     border: 1px solid #ccc;
@@ -409,7 +411,7 @@ form button:hover {
     }
 }
 
-@media (min-width: 320px) and (max-width: 375px) {
+@media (min-width: 320px) and (max-width: 536px) {
 
     .burger-menu {
         top: 15px; /* Adjust according to header padding */
@@ -471,5 +473,10 @@ form button:hover {
 
     img {
         margin-bottom: 16px;
+    }
+
+    .footer-wrapper {
+        display: flex;
+        flex-wrap: wrap;
     }
 }
